syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
  flat_package: true
};

message WorkflowIdentity {
  int64 id = 1;
}

message ExecutionIdentity {
  int64 id = 1;
}

message ActorVirtualIdentity {
  string name = 1;
}

message ChannelIdentity {
  ActorVirtualIdentity from_worker_id = 1 [(scalapb.field).no_box = true];
  ActorVirtualIdentity to_worker_id = 2 [(scalapb.field).no_box = true];
  bool is_control = 3;
}

message OperatorIdentity {
  string id = 1;
}

message PhysicalOpIdentity{
  OperatorIdentity logical_op_id = 1 [(scalapb.field).no_box = true];
  string layer_name = 2;
}

message ChannelMarkerIdentity{
  string id = 1;
}



