syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "edu/uci/ics/amber/engine/common/virtual_identity.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false
  flat_package: true
};

message PortIdentity {
  int32 id = 1;
  bool internal = 2;
}

message InputPort {
  PortIdentity id = 1 [(scalapb.field).no_box = true];
  string display_name = 2;
  bool allow_multi_links = 3;
  repeated PortIdentity dependencies = 4;
}

message OutputPort {
  PortIdentity id = 1 [(scalapb.field).no_box = true];
  string display_name = 2;
  bool blocking = 3;
}


message PhysicalLink {
  PhysicalOpIdentity from_op_id = 1 [(scalapb.field).no_box = true];
  PortIdentity from_port_id = 2 [(scalapb.field).no_box = true];
  PhysicalOpIdentity to_op_id = 3 [(scalapb.field).no_box = true];
  PortIdentity to_port_id = 4 [(scalapb.field).no_box = true];
}
